--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"test": "jest --watch"
 	},
 	"dependencies": {
 		"next": "14.2.15",
@@ -15,7 +16,12 @@
 		"sass": "^1.80.3"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^6.6.2",
+		"@testing-library/react": "^16.0.1",
+		"babel-jest": "^29.7.0",
 		"eslint": "^8",
-		"eslint-config-next": "14.2.15"
+		"eslint-config-next": "14.2.15",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0"
 	}
 }
