--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18",
-    "sass": "^1.80.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
@@ -30,11 +29,15 @@
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
     "babel-jest": "^29.7.0",
+    "css-loader": "^7.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "eslint-plugin-storybook": "^0.9.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "storybook": "^8.3.6"
+    "sass": "^1.80.3",
+    "sass-loader": "^16.0.2",
+    "storybook": "^8.3.6",
+    "style-loader": "^4.0.0"
   }
 }
